# pld-repo

./: .gitignore  README.md
dev-logs/: 11.3之后的修改计划  APB外设相关.md  E203 Programming.md  E203 RISCV USER INTERFACE 开发文档.md  E203 SoC整合.md  E203在ZYBO板上的引脚绑定.md  VideoGenerator接口设计.md  memc-cam-write  memc-cam-write.json  native-ddr.json
dev-srcs/remote_control/: platformio.ini
dev-srcs/remote_control_des/: platformio.ini
dev-srcs/rv-usr-interface/: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  env.sh
dev-srcs/rv-usr-interface/.cache/clangd/index/: core-interface.h.782C562FE09A830D.idx  core.c.0D228B1A787240FB.idx  core.cpp.6B039003A528EA05.idx  main.c.DB7C0D80A2F829FA.idx  ui-configs.h.CE6B76E8CBDDADFB.idx
dev-srcs/rv-usr-interface/core/: core-interface.h  core.c  core.cpp  core.cpp.o.d  menu.c  print.c  ui-configs.h
dev-srcs/rv-usr-interface/sim/: disp.c  fonts.c  main.c
dev-srcs/rv-usr-interface/soc/: disp.c  io-regs.h  soc-configs.h
projects/ddr-test/: ddr-test.xpr
projects/e203-zybo/: e203-zybo.xpr
projects/main/: bicubic_top_tb_behav.wcfg  bicubic_top_tb_behav1.wcfg  fifo_test_behav.wcfg  main.xpr  shram_tb_behav.wcfg  shram_tb_behav1.wcfg  shram_tb_behav2.wcfg
rtl-srcs/: .gitignore
rtl-srcs/e203-soc/: helloworld.verilog  tb_top.v
rtl-srcs/mcs/: sys-e203-basic-fix-apb-fix-wraddr.prm  sys-e203-basic-fix-apb.prm  sys-e203-basic-fix.prm  sys-e203-basic.prm  sys-e203-basic2.prm  sys-full-t1-fix-menu.prm  sys-full-t1.prm  sys-v1-baremetal.prm  sys-v1.1-sharpen.prm  sys-v1.2-sharpen.prm  sys-v2.0.prm  sys-v2.5.prm
(+1339 files in other folders)
